# Mrs

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml
auth/: Cargo.toml  Dockerfile
auth/src/: db.rs  email.rs  error.rs  jwt.rs  lib.rs  main.rs  otp.rs  rate_limit.rs  routes.rs
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: auth-client.ts  client.ts  endpoints.ts
dashboard/src/api/__tests__/: endpoints.test.ts
dashboard/src/components/backtest/: ConfigPanel.tsx  DrawdownChart.tsx  EquityCurve.tsx  MonthlyHeatmap.tsx  ResultsPanel.tsx  StatsCards.tsx  TradeTable.tsx
dashboard/src/components/backtest/__tests__/: MonthlyHeatmap.test.tsx  StatsCards.test.tsx
dashboard/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
dashboard/src/components/layout/__tests__/: Sidebar.test.tsx
dashboard/src/components/shared/: DateRangePicker.tsx  InstrumentSelector.tsx
dashboard/src/components/signals/: SignalCard.tsx
dashboard/src/components/signals/__tests__/: SignalCard.test.tsx
dashboard/src/hooks/: useBacktest.ts  useConfigs.ts  useData.ts  useSignals.ts
dashboard/src/lib/: auth.tsx
dashboard/src/pages/: BacktestDetailPage.tsx  BacktestPage.tsx  ChartPage.tsx  ComparePage.tsx  DataPage.tsx  HistoryPage.tsx  LoginPage.tsx  OptimizePage.tsx  SignalsPage.tsx
dashboard/src/pages/__tests__/: LoginPage.test.tsx  OptimizePage.test.tsx
dashboard/src/stores/: backtest-store.ts  ui-store.ts
dashboard/src/stores/__tests__/: backtest-store.test.ts  ui-store.test.ts
dashboard/src/types/: api.ts  auth.ts  backtest.ts  config.ts  data.ts  index.ts  signal.ts  strategy.ts
dashboard/src/types/__tests__/: types.test.ts
data/: README.md
docs/: api.md  architecture.md  auth.md  cache.md  dashboard-design.md  data-pipeline.md  database.md  deployment.md  strategy.md  telegram.md
engine/: Cargo.toml  Dockerfile
engine/src/: lib.rs  main.rs  test_helpers.rs
engine/src/api/: backtest.rs  configs.rs  data.rs  error.rs  export.rs  mod.rs  response.rs  router.rs  signals.rs  state.rs  ws.rs
engine/src/backtest/: backtest_tests.rs  engine.rs  mod.rs  report.rs  result.rs  stats.rs  sweep.rs
engine/src/data/: error.rs  fetcher.rs  mod.rs  parquet_store.rs  postgres_store.rs  provider.rs  twelve_data.rs
engine/src/db/: backtests.rs  cache.rs  cache_error.rs  cache_reader.rs  candles.rs  configs.rs  error.rs  instruments.rs  migration_tests.rs  mod.rs  signals.rs  subscribers.rs  trades.rs  write_behind.rs
engine/src/models/: candle.rs  instrument.rs  mod.rs
engine/src/strategy/: add_to_winners.rs  config.rs  fill.rs  integration_tests.rs  mod.rs  order.rs  position.rs  signal.rs  strategy_tests.rs  trade.rs  types.rs
migrations/: 001_create_instruments.sql  002_create_candles.sql  003_create_strategy_configs.sql  004_create_backtest_runs.sql  005_create_trades.sql  006_create_live_signals.sql  007_create_subscribers.sql  008_create_allowed_emails.sql  009_create_otp_requests.sql
telegram/: Cargo.toml  Dockerfile
telegram/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  notifications.rs  signals.rs  store.rs
