[workspace]
members = ["engine", "telegram", "auth"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Financial math
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
rayon = "1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Data storage
arrow = "54"
parquet = { version = "54", features = ["async"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
