[package]
name = "sr-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sr-auth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Auth-specific dependencies
jsonwebtoken = "9"
argon2 = "0.5"
dashmap = "6"
rand = "0.8"
