[package]
name = "sr-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sr-engine"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
