[package]
name = "sr-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sr-telegram"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
teloxide = { workspace = true }
